# CodexHUB

./: .codexrc  .dockerignore  .editorconfig-checker.json  .env.cursor-first.example  .env.example  .eslintrc.json  .gitignore  .markdownlint.json  .markdownlintignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  .yamllint  .yamllint.yaml  AGENT.md  AGENTS.md  AGENTS_CURSOR_INTEGRATION.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_2025-02-14.md  AUDIT_REPORT_FINAL.md  Block1-2215_KBReady_Master_FULL_AllBlocks_MERGED.md  Brain docs cleansed .ndjson  CHANGELOG.md  CODEX_CURSOR_INTEGRATION_INSTRUCTIONS.md  CODEX_CURSOR_MANDATE.md  CODEX_FINAL_INSTRUCTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_AUTO_START_INSTRUCTIONS.md  CURSOR_INTEGRATION_COMPLETE_GUIDE.md  CURSOR_INTEGRATION_FILES.md  CURSOR_INTEGRATION_FINAL_REVIEW.md  CURSOR_INTEGRATION_INSTRUCTIONS.md  CURSOR_INTEGRATION_README.md  CURSOR_INTEGRATION_STATUS.md  CURSOR_INTEGRATION_SUMMARY.md  Dockerfile  EXPONENTIAL_IMPROVEMENT_SUMMARY.md  (+31 more)
.github/: CODEOWNERS  (+1 more)
U-DIG-IT/runner_project/: .gitignore  .stage_complete  COMMAND_PROMPTS.md  README.md  pyproject.toml
U-DIG-IT/runner_project/src/: config.py  errors.py  main.py  types.py
U-DIG-IT/runner_project/tests/: __init__.py  asyncio_plugin.py  conftest.py  test_api_endpoints.py  test_command_runner.py  test_cursor_adapter.py  test_decision_agent.py  test_ethics_agent.py  test_git_actions.py  test_knowledge_graph.py  test_plugins.py  test_resilience.py  test_simulation.py  test_stage_detection.py  test_task_manager.py  test_ui.py
(+583 files in other folders)
