[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runner-project"
version = "0.1.0"
description = "Stage 3 polished multi-agent runner"
authors = [{ name = "Codex Automation" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]",
    "pytest",
    "httpx",
    "networkx>=3.0",
    "numpy>=1.24",
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
